// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package entpb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

option go_package = "entgo.io/contrib/entproto/internal/todo/ent/proto/entpb";

message Attachment {
  bytes id = 1;
}

message Group {
  int32 id = 1;

  string name = 2;

  repeated User users = 3;
}

message Todo {
  int32 id = 1;

  string task = 2;

  Status status = 3;

  User user = 4;

  enum Status {
    PENDING = 0;

    IN_PROGRESS = 1;

    DONE = 2;
  }
}

message User {
  int32 id = 1;

  string user_name = 2;

  google.protobuf.Timestamp joined = 3;

  uint32 points = 4;

  uint64 exp = 5;

  Status status = 6;

  int32 external_id = 8;

  Group group = 7;

  enum Status {
    STATUS_UNSPECIFIED = 0;

    PENDING = 1;

    ACTIVE = 2;
  }
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteUserRequest ) returns ( google.protobuf.Empty );
}
